--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                             
                             <jdbc>
                                 <driver>com.mysql.cj.jdbc.Driver</driver>
-                                <url>jdbc:mysql://localhost:3306/mydb</url>
+                                <url>jdbc:mysql://host.docker.internal:3306/mydb</url>
                                 <user>myuser</user>
                                 <password>mypassword</password>
                             </jdbc>
