--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=myserver
 server.port=8888
 # spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/mydb
 # spring.datasource.url=jdbc:mariadb://localhost:3307/mydb
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
